--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Mon cv</title>
+    <title>Portfolio Mbemba Nhora</title>
   </head>
   <body>
     <div id="root"></div>
